<resources>
    <string name="app_name">Bubbles</string>
    <string name="Vxod">ДОБРО ПОЖАЛОВАТЬ</string>
    <string name="login">Email</string>
    <string name="loginreg">Введите email</string>
    <string name="password">Пароль</string>
    <string name="passwordreg">Придумайте пароль</string>
    <string name="vxod2">Войти</string>
    <string name="reg">Регистрация</string>
    <string name="regreg">Зарегистрироваться</string>
    <string name="logout">Выход</string>
    <string name="zab">Забыли пароль?</string>
    <string name="poisk">Поиск</string>
    <string name="place">Место</string>
    <string name="zagolovok">ЗАГОЛОВОК</string>
    <string name="adres">Адрес</string>
    <string name="adres2">Адрес поставится автоматически</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="addplace">Добавить место на карту</string>
    <string name="like">Поставить лайк</string>
    <string name="replace">Переместить место?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="filt1">отдых</string>
    <string name="filt2">еда</string>
    <string name="filt3">веселье</string>
    <string name="filt4">с друзьями</string>
    <string name="addph">Добавить фото</string>
    <string name="delph">Удалить фото</string>
    <string name="marsh">Построить маршрут</string>
    <string name="jaloba">Пожаловаться</string>
    <string name="otziv">ОТЗЫВЫ</string>
    <string name="otziv1">Никнейм</string>
    <string name="otziv2">Время</string>
    <string name="otziv3">Какой-то текст в отзыве</string>
    <string name="infaboutplace1">Добавьте информацию о месте</string>
    <string name="infaboutplace2">Добавить</string>
    <string name="infaboutplace3">Отмена</string>
    <string name="deleteplacemap">Удалить место?</string>
</resources>