<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="110dp">
    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:contentDescription="@string/place"
        android:src="@drawable/shapeforcontadd"
        android:background="@android:color/transparent"
        android:layout_marginTop="0dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/avatarka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/avatarkaotziv"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/avatar">
                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="58dp"
                    android:layout_height="12dp"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:text="@string/otziv1"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="70dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="10dp"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    android:maxLines="1"
                    android:textColor="@color/text_log_pas"
                    android:text="@string/otziv2"/>

                <ImageView
                    android:id="@+id/stars"
                    android:layout_width="92dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/star1"/>

            </LinearLayout>
            <TextView
                android:id="@+id/textotziv"
                android:layout_width="250dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/avatar"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal"
                android:text="@string/otziv3"
                android:maxLines="3"
                android:ellipsize="end"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>