<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/placepodr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
        <!-- Здесь разместите содержимое нижней панели -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/widjet"
        android:layout_marginTop="10dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:id="@+id/relative1">

            <TextView
                android:id="@+id/Titlemak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/zagolovok"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/Adresmak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/adres"
                android:maxLines="1"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_below="@id/Titlemak"
                android:textColor="@color/text_log_pas" />
            <LinearLayout
                android:id="@+id/rel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_below="@id/Adresmak"
                android:visibility="gone">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gradchill"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filt1"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gradfood" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filt2"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fun" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filt3"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gradfriends" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filt4"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>
                </FrameLayout>

            </LinearLayout>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative1"
            android:id="@+id/forview"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="240dp" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/addphotobutt"
                android:layout_marginEnd="10dp"
                android:alpha="0.7">
                <ImageButton
                    android:id="@+id/buttonaddphoto"
                    android:layout_width="350dp"
                    android:layout_height="240dp"
                    android:src="@drawable/shapeaddphoto"
                    android:contentDescription="@string/add"
                    android:visibility="visible"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/addphoto"
                    android:layout_gravity="center" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="gone"
                android:id="@+id/delph">
                <ImageButton
                    android:id="@+id/deletephoto"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/delete"
                    android:layout_below="@id/forview"
                    android:src="@drawable/back_forzoom"
                    android:contentDescription="@string/delph"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delph"
                    android:layout_gravity="center"
                    android:textSize="9sp"
                    android:gravity="center" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:visibility="gone"
                android:id="@+id/addph">
                <ImageButton
                    android:id="@+id/addphotoimbutt"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/add"
                    android:src="@drawable/back_forzoom"
                    android:contentDescription="@string/addph"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addph"
                    android:textSize="9sp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </FrameLayout>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/postr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/forview"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/marshrut"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:src="@drawable/chillpostr"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/marsh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marsh"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="normal"
                    android:textColor="@color/black"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17.5dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:src="@drawable/jaloba"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/marsh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jaloba"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="normal"
                    android:textColor="@color/white"/>
            </FrameLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17.5dp"
                android:src="@drawable/heart"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_below="@id/postr"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:id="@+id/rbar">
            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:numStars="5"
                android:stepSize="1"
                android:rating="0"
                android:progressDrawable="@drawable/custom_rating_bar"
                android:isIndicator="false"
                android:clickable="true"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="91dp"
                android:text="@string/otziv"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerotziv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/rbar"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:overScrollMode="never" />
    </RelativeLayout>




</FrameLayout>