<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="110dp"
    tools:context=".glav"
    android:id="@+id/maket"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:contentDescription="@string/place"
        android:src="@drawable/shapeforcontadd"
        android:background="@android:color/transparent"
        android:layout_marginTop="0dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="-5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/photocont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/black"
            android:layout_marginStart="20dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/Photo"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:outlineProvider="background"/>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zagolovok"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/Adres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adres"
                android:textSize="12sp"
                android:textStyle="normal"
                android:layout_below="@id/Title"
                android:textColor="@color/text_log_pas"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>